--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6122,6 +6122,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.07.24},
 }
 
+@Article{Camacho2002,
+  author    = {Camacho, J. and Guimerà, R. and Amaral, L. A. N.},
+  title     = {Robust Patterns in Food Web Structure},
+  journal   = {Physical Review Letters},
+  year      = {2002},
+  volume    = {88},
+  number    = {22},
+  doi       = {10.1103/physrevlett.88.228102},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @Article{CamachoCollados2018,
   author    = {Camacho-Collados, J. and Pilehvar, M. T.},
   title     = {From Word To Sense Embeddings: A Survey on Vector Representations of Meaning},
@@ -8354,6 +8366,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.annepidem.2010.02.011},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{CotillaSanchez2012,
+  author    = {Cotilla-Sanchez, E. and Hines, P. D. H. and Barrows, C. and Blumsack, S.},
+  title     = {Comparing the Topological and Electrical Structure of the North American Electric Power Infrastructure},
+  journal   = {IEEE Systems Journal},
+  year      = {2012},
+  volume    = {6},
+  number    = {4},
+  pages     = {616-626},
+  doi       = {10.1109/jsyst.2012.2183033},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
 }
 
 @Article{Couldry2008,
@@ -10602,6 +10627,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.26},
 }
 
+@Article{Dunne2002a,
+  author    = {Dunne, J. A. and Williams, R. J. and Martinez, N. D.},
+  title     = {Network structure and biodiversity loss in food webs: robustness increases with connectance},
+  journal   = {Ecology Letters},
+  year      = {2002},
+  volume    = {5},
+  number    = {4},
+  pages     = {558-567},
+  doi       = {10.1046/j.1461-0248.2002.00354.x},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @InProceedings{Dunne2004,
   author    = {Dunne, J. A. and Williams, R. J. and Martinez, N. D.},
   title     = {Network structure and robustness of marine food webs},
@@ -10748,6 +10786,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/0022-1031(76)90030-5},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Ebel2002b,
+  author    = {Ebel, H. and Mielsch, L.-I. and Bornholdt, S.},
+  title     = {Scale-free topology of e-mail networks},
+  journal   = {Physical Review E},
+  year      = {2002},
+  volume    = {66},
+  pages     = {035103},
+  doi       = {10.1103/PhysRevE.66.035103},
+  owner     = {Vincent},
+  timestamp = {2010.11.30},
 }
 
 @TechReport{Ebers1997,
@@ -13150,6 +13200,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.27},
 }
 
+@Article{Fu2010a,
+  author    = {Fu, P. H. and Liu, Y. C.},
+  title     = {The Security Analysis of Supply Chain Network Based on the Complex Network},
+  journal   = {Advanced Materials Research},
+  year      = {2010},
+  volume    = {143-144},
+  pages     = {1218-1222},
+  doi       = {10.4028/www.scientific.net/amr.143-144.1218},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @Article{Fu2015,
   author    = {Fu, Y. and Wu, X. and Chen, Z. and Sun, J. and Zhao, J. and Xu, W.},
   title     = {A New Approach for Flexible Molecular Docking Based on Swarm Intelligence},
@@ -15276,6 +15338,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   volume    = {433},
   pages     = {895-900},
   doi       = {10.1038/nature03288},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
+@Article{Guimera2005b,
+  author    = {Guimerà, R. and Mossa, S. and Turtschi, A. and Amaral, L. A. N.},
+  title     = {The worldwide air transportation network: Anomalous centrality, community structure, and cities' global roles},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2005},
+  volume    = {102},
+  number    = {22},
+  pages     = {7794-7799},
+  doi       = {10.1073/pnas.0407994102},
   owner     = {Vincent},
   timestamp = {2010.06.03},
 }
@@ -25309,6 +25384,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.01.22},
 }
 
+@Article{Maslov2002,
+  author    = {Maslov, Sergei and Sneppen, Kim},
+  title     = {Specificity and Stability in Topology of Protein Networks},
+  journal   = {Science},
+  year      = {2002},
+  volume    = {296},
+  number    = {5569},
+  pages     = {910-913},
+  doi       = {10.1126/science.1065103},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @InProceedings{Mason2007,
   author    = {Mason, B. L. and Thomas, S.},
   title     = {Tags, networks, narrative: exploring the use of social software for the study of narrative in digital contexts},
@@ -28300,6 +28388,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevLett.89.208701},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Newman2002c,
+  author    = {Newman, M. E. J. and Forrest, Stephanie and Balthrop, Justin},
+  title     = {Email networks and the spread of computer viruses},
+  journal   = {Physical Review E},
+  year      = {2002},
+  volume    = {66},
+  pages     = {035101},
+  doi       = {10.1103/PhysRevE.66.035101},
+  owner     = {Vincent},
+  timestamp = {2010.10.04},
 }
 
 @Article{Newman2003,
@@ -33414,6 +33514,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.04.27},
 }
 
+@Article{Rui2013,
+  author    = {Rui, Y. and Ban, Y. and Wang, J. and Haas, J.},
+  title     = {Exploring the patterns and evolution of self-organized urban street networks through modeling},
+  journal   = {European Physical Journal B},
+  year      = {2013},
+  volume    = {86},
+  pages     = {74},
+  doi       = {10.1140/epjb/e2012-30235-7},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @Article{Ruiz-Casado2007,
   author    = {Ruiz-Casado, M. and Alfonseca, E. and Castells, P.},
   title     = {Automatising the learning of lexical patterns: An application to the enrichment of WordNet by extracting semantic relationships from Wikipedia},
@@ -34827,6 +34939,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.18},
 }
 
+@Article{Serrano2003,
+  author    = {Ángeles Serrano, M. and Boguñá, M.},
+  title     = {Topology of the world trade web},
+  journal   = {Physical Review E},
+  year      = {2003},
+  volume    = {68},
+  number    = {1},
+  doi       = {10.1103/physreve.68.015101},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @InCollection{Serrat2017,
   author    = {Serrat, O.},
   title     = {Social Network Analysis},
@@ -35291,6 +35415,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.joi.2011.03.003},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Silva2012,
+  author    = {Silva, M. B. B. and Miranda, J. G. V. and Corso, G. and Copelli, M. and Vasconcelos, N. and Ribeiro, S. Andrade, R. F. S.},
+  title     = {Statistical characterization of an ensemble of functional neural networks},
+  journal   = {European Physical Journal B},
+  year      = {2012},
+  volume    = {85},
+  pages     = {358},
+  doi       = {10.1140/epjb/e2012-30481-7},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
 }
 
 @Article{Silva2012a,
@@ -36045,6 +36181,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {http://www.digra.org/digital-library/publications/interactive-digital-storytelling-towards-a-hybrid-conceptual-approach/},
+}
+
+@Article{Sporns2002,
+  author    = {Sporns, O.},
+  title     = {Network analysis, complexity, and brain function},
+  journal   = {Complexity},
+  year      = {2002},
+  volume    = {8},
+  number    = {1},
+  pages     = {56-60},
+  doi       = {10.1002/cplx.10047},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
 }
 
 @Article{Sprecher2004,
@@ -41306,6 +41455,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Xu2010a,
+  author    = {Xu, J. Q. and Liu, H. and Zhao, H. and Yu, S.},
+  title     = {Research on Structural Holes and Closeness of Software Network},
+  journal   = {Journal of Northeastern University},
+  year      = {2010},
+  volume    = {31},
+  number    = {11},
+  pages     = {1562-1565},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+  url       = {https://en.cnki.com.cn/Article_en/CJFDTotal-DBDX201011012.htm},
+}
+
 @Article{Xu2013,
   author    = {Xu, M. and Xu, C. and He, X. and Jin, J. S. and Luo, S. and Rui, Y.},
   title     = {Hierarchical affective content analysis in arousal and valence dimensions},
@@ -41537,6 +41699,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2433396.2433471},
   owner     = {Vincent},
   timestamp = {2013.02.19},
+}
+
+@Article{Yang2013b,
+  author    = {Yang, B. and Zhao, H. and Zhang, J. and Ai, J. and Jia, S.-Y. and Ge, X. and Liu, W.},
+  title     = {Analysis of Interlayer Connection Catastrophe Characteristics in Internet {AS} level Topology},
+  journal   = {TELKOMNIKA Indonesian Journal of Electrical Engineering},
+  year      = {2013},
+  volume    = {11},
+  number    = {2},
+  doi       = {10.11591/telkomnika.v11i2.1978},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
 }
 
 @InProceedings{Yang2016,
@@ -42369,6 +42543,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://digital.lib.washington.edu/researchworks/handle/1773/23330},
 }
 
+@Article{Zhang2013a,
+  author    = {Zhang, J. and Zhao, H. and Yang, B.},
+  title     = {Fractals on IPv6 network topology},
+  journal   = {Telkomnika},
+  year      = {2013},
+  volume    = {11},
+  number    = {2},
+  pages     = {577-582},
+  doi       = {10.11591/telkomnika.v11i2.1979},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
+}
+
 @InProceedings{Zhang2014,
   author    = {Zhang, Y. and Lai, G. and Zhang, M. and Zhang, Y. and Liu, Y. and Ma, S.},
   title     = {Explicit factor models for explainable recommendation based on phrase-level sentiment analysis},
@@ -42672,6 +42859,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {531-540},
   doi       = {10.1145/1526709.1526781},
   timestamp = {2020.01.05},
+}
+
+@Article{Zheng2008,
+  author    = {Zheng, X. and Zeng, D. and Li, H. and Wang, F.},
+  title     = {Analyzing open-source software systems as complex networks},
+  journal   = {Physica A: Statistical Mechanics and its Applications},
+  year      = {2008},
+  volume    = {387},
+  number    = {24},
+  pages     = {6190-6200},
+  doi       = {10.1016/j.physa.2008.06.050},
+  owner     = {Vincent},
+  timestamp = {2021.09.25},
 }
 
 @Article{Zheng2011,
