added Mandal2021a and Janosov2021a

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2749,6 +2749,19 @@
   timestamp = {2019.04.13},
 }
 
+@Article{Bashkyrova2021,
+  author    = {Bashkyrova, O. and Gaidash, A. and Lutsiuk, M.},
+  title     = {The archetype of the Wise Old Man in modern Ukrainian prose: a diachronic perspective},
+  journal   = {Slavia Centralis},
+  year      = {2021},
+  volume    = {14},
+  number    = {1},
+  pages     = {210-223},
+  owner     = {Vincent},
+  timestamp = {2021.10.23},
+  url       = {https://journals.um.si/index.php/slaviacentralis/article/view/1271},
+}
+
 @InProceedings{Basili2008,
   author    = {Basili, R. and Marocco, P. and Milizia, D.},
   title     = {Semantically Rich Spaces for Document Clustering},
@@ -3107,7 +3120,7 @@
 }
 
 @InProceedings{Behera2016a,
-  author    = {Behera, R. Kumar and Rath, S. K.},
+  author    = {Behera, R. K. and Rath, S. K.},
   title     = {An efficient modularity based algorithm for community detection in social network},
   booktitle = {International Conference on Internet of Things and Applications},
   year      = {2016},
@@ -6748,6 +6761,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1520340.1520539},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{ChandraKala2012,
+  author    = {ChandraKala, S. and Sindhu, C.},
+  title     = {Opinion mining and sentiment classification: A survey},
+  journal   = {ICTACT Journal on Soft Computing},
+  year      = {2012},
+  volume    = {3},
+  number    = {1},
+  pages     = {420-425},
+  doi       = {10.21917/ijsc.2012.0065},
+  owner     = {Vincent},
+  timestamp = {2021.11.25},
 }
 
 @Article{Chang2005,
@@ -14100,6 +14126,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Hugo-s-Les-Miserables},
 }
 
+@TechReport{Giorgino2004,
+  author      = {Giorgino, T.},
+  title       = {An Introduction to Text Classification},
+  institution = {Consiglio Nazionale delle Ricerche},
+  year        = {2004},
+  owner       = {Vincent},
+  timestamp   = {2021.11.25},
+  url         = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.105.8473&rep=rep1&type=pdf},
+}
+
 @Book{Girard1961,
   title     = {Deceit, Desire, and the Novel: Self and Other in Literary Structure},
   publisher = {Johns Hopkins Press},
@@ -18279,6 +18315,43 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.11.11},
 }
 
+@Electronic{Janosov2017a,
+  author       = {Janosov, M.},
+  month        = {09},
+  year         = {2017},
+  title        = {{Game of Thrones}: Prediction 2.0},
+  howpublished = {\url{https://networkdatascience.ceu.edu/node/352}},
+  organization = {{Central European University}},
+  url          = {https://networkdatascience.ceu.edu/node/352},
+  owner        = {Vincent},
+  timestamp    = {2021.11.25},
+}
+
+@Article{Janosov2021,
+  author        = {Janosov, M. and Borsi, F.},
+  title         = {Asimov's Foundation -- turning a data story into an NFT artwork},
+  journal       = {arXiv},
+  year          = {2021},
+  volume        = {physics.soc-ph},
+  pages         = {2109.15079},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2021.10.05},
+  url           = {https://arxiv.org/abs/2109.15079},
+}
+
+@Article{Janosov2021a,
+  author    = {Janosov, M.},
+  title     = {Network Science Predicts Who Dies Next in Game of Thrones},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.SI},
+  pages     = {2110.09856},
+  owner     = {Vincent},
+  timestamp = {2021.10.20},
+  url       = {https://arxiv.org/abs/2110.09856},
+}
+
 @Article{Janssen2012,
   author    = {Janssen, J. and Hurshman, M. and Kalyaniwalla, N.},
   title     = {Model Selection for Social Networks Using Graphlets},
@@ -22318,6 +22391,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
 }
 
+@InProceedings{Lee2020j,
+  author    = {Lee, O-J. and Kim, J.-T. and You, E.-S.},
+  title     = {Towards Story-based Summarization of Narrative Multimedia},
+  booktitle = {ACM International Conference on Intelligent Computing and its Emerging Applications},
+  year      = {2020},
+  pages     = {1-5},
+  doi       = {10.1145/3440943.3444719},
+  owner     = {Vincent},
+  timestamp = {2021.09.29},
+}
+
 @Article{Lee2021,
   author    = {Lee, O-J. and You, E.-S. and Kim, J.-T.},
   title     = {Plot Structure Decomposition in Narrative Multimedia by Analyzing Personalities of Fictional Characters},
@@ -24794,6 +24878,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-30228-5_8},
   owner     = {Vincent},
   timestamp = {2018.06.14},
+}
+
+@InProceedings{Mandal2021a,
+  author    = {Mandal, J. K. and Halder, S. K. and Kumar, A.},
+  title     = {Analysis of Structure and Plots of Characters from Plays and Novels to Create Novel and Plot Data Bank ({NPDB})},
+  booktitle = {International Conference on Innovations in Software Architecture and Computational Systems},
+  year      = {2021},
+  series    = {Studies in Autonomic, Data-driven and Industrial Computing},
+  pages     = {237-242},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-16-4301-9_18},
+  owner     = {Vincent},
+  timestamp = {2021.10.13},
 }
 
 @InProceedings{Mani2000,
@@ -27954,6 +28051,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.04.25},
 }
 
+@InProceedings{Nagrani2017,
+  author    = {Nagrani, A. and Zisserman, A.},
+  title     = {From Benedict Cumberbatch to Sherlock Holmes: Character Identification in {TV} series without a Script},
+  booktitle = {British Machine Vision Conference},
+  year      = {2017},
+  pages     = {107},
+  doi       = {10.5244/c.31.107},
+  owner     = {Vincent},
+  timestamp = {2021.10.04},
+}
+
 @Book{Nagy2015,
   title     = {Homer the Preclassic},
   publisher = {University of California Press},
@@ -30840,6 +30948,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://press.uchicago.edu/ucp/books/book/chicago/E/bo28465405.html},
 }
 
+@InProceedings{Piper2021,
+  author        = {Piper, A. and So, R. Jean and Bamman , D.},
+  title         = {Narrative Theory for Computational Narrative Understanding},
+  booktitle     = {Conference on Empirical Methods in Natural Language Processing},
+  year          = {2021},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2021.09.11},
+  url           = {https://people.ischool.berkeley.edu/~dbamman/pubs/pdf/piper_so_bamman_emnlp2021.pdf},
+}
+
+@InProceedings{Piper2021a,
+  author    = {Piper, A. and Bagga, S. and Monteiro, L. and Yang, A. and Labrosse, M. and Liu, Y. L.},
+  title     = {Detecting Narrativity Across Long Time Scales},
+  booktitle = {Computational Humanities Research Conference},
+  year      = {2021},
+  pages     = {319-332},
+  owner     = {Vincent},
+  timestamp = {2021.11.17},
+  url       = {https://txtlab.org/wp-content/uploads/2021/11/Piper_DetectingNarrativity_2021.pdf},
+}
+
 @Article{Pisinger1995,
   author    = {Pisinger, D.},
   title     = {An expanding-core algorithm for the exact 0–1 knapsack problem},
@@ -31778,6 +31908,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icce.2016.7430726},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Ramirez-Arellano2020,
+  author    = {Ramirez-Arellano, A.},
+  title     = {Classification of Literary Works: Fractality and Complexity of the Narrative, Essay, and Research Article},
+  journal   = {Entropy},
+  year      = {2020},
+  volume    = {22},
+  number    = {8},
+  pages     = {904},
+  doi       = {10.3390/e22080904},
+  owner     = {Vincent},
+  timestamp = {2021.11.11},
 }
 
 @Article{Ramsay2005,
@@ -34446,6 +34589,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh-abstracts.library.cmu.edu/works/10056},
 }
 
+@InProceedings{Schmidt2021,
+  author    = {Schmidt, D. and Zehe, A. and Lorenzen, J. and Sergel, L. and Düker, S. and Krug, M. and Puppe, F.},
+  title     = {The FairyNet Corpus - Character Networks for German Fairy Tales},
+  booktitle = {5th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2021},
+  pages     = {49-56},
+  owner     = {Vincent},
+  timestamp = {2021.11.09},
+  url       = {https://aclanthology.org/2021.latechclfl-1.6/},
+}
+
 @InProceedings{Schmitt2009,
   author    = {Schmitt, D. T. and Kurkowski, S. H. and Mendenhall, M. J.},
   title     = {Building Social Networks in Persistent Video Surveillance},
@@ -35722,6 +35876,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@InCollection{Smith2007a,
+  author        = {Smith, G. M.},
+  title         = {Redeeming Ally: Seriality and the Character Network},
+  booktitle     = {Beautiful {TV} - The Art and Argument of Ally McBeal},
+  publisher     = {University of Texas Press},
+  year          = {2007},
+  chapter       = {3},
+  pages         = {73-144},
+  __markedentry = {[Vincent:]},
+  doi           = {10.7560/716421-004},
+  owner         = {Vincent},
+  timestamp     = {2021.11.02},
+}
+
 @Book{Smith2009,
   title     = {The Theory of Moral Sentiments},
   publisher = {Penguin},
@@ -36882,7 +37050,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Sukthanker2018,
-  author    = {Sukthanker, Rhea and Poria, Soujanya and Cambria, Erik and Thirunavukarasu, Ramkumar},
+  author    = {Sukthanker, R. and Poria, S. and Cambria, E. and Thirunavukarasu, R.},
   title     = {Anaphora and Coreference Resolution: A Review},
   journal   = {arXiv},
   year      = {2018},
@@ -41789,6 +41957,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr42600.2020.01340},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Yang2021i,
+  author    = {Yang, Y. and Song, Y.},
+  title     = {Exploring the similarity between Han's and non-Han's Yuan poetry: Resistance distance metrics over character co-occurrence networks},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2021},
+  volume    = {in press},
+  pages     = {fqab082},
+  doi       = {10.1093/llc/fqab082},
+  owner     = {Vincent},
+  timestamp = {2021.10.26},
 }
 
 @Article{Yao2019,
