--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -8944,6 +8944,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.03.16},
 }
 
+@InProceedings{Danilova2021,
+  author    = {Danilova, A. and Tarasevich, Y. Y.},
+  title     = {Network analysis of the novel The Master and Margarita by M.A.Bulgakov},
+  booktitle = {34th Marian Smoluchowski Symposium on Statistical Physics},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2021.12.11},
+  url       = {https://arxiv.org/abs/2112.02820},
+}
+
 @InProceedings{Danisman2008,
   author    = {Danisman, T. and Alpkocak1, A.},
   title     = {Feeler: Emotion Classification of Text Using Vector Space Model},
@@ -17243,6 +17253,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/40985589},
 }
 
+@Article{Hopp2020,
+  author    = {Hopp, F. R. and Fisher, J. T. and Weber, R.},
+  title     = {A Graph-Learning Approach for Detecting Moral Conflict in Movie Scripts},
+  journal   = {Media and Communication},
+  year      = {2020},
+  volume    = {8},
+  number    = {3},
+  pages     = {164-179},
+  doi       = {10.17645/mac.v8i3.3155},
+  owner     = {Vincent},
+  timestamp = {2021.12.12},
+}
+
 @InCollection{Horadam2014,
   author    = {Alzahrani, T. and Horadam, K. J.},
   title     = {Community Detection in Bipartite Networks: Algorithms and Case studies},
@@ -19505,6 +19528,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-88411-8_2},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Kelbert2021,
+  author    = {Kelbert, E.},
+  title     = {Appearances - Character description as a network of signification in Russian translations of Jane Eyre},
+  journal   = {Target. International Journal of Translation Studies},
+  year      = {2021},
+  doi       = {10.1075/target.20079.kel},
+  owner     = {Vincent},
+  timestamp = {2021.12.02},
 }
 
 @InCollection{Keller2002,
@@ -22415,6 +22448,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.02.14},
 }
 
+@InProceedings{Lee2021d,
+  author    = {Lee, O-J. and Kim, J.-T. and You, E.-S.},
+  title     = {Quantifying Conflicts in Narrative Multimedia by Analyzing Visual Storytelling Techniques},
+  booktitle = {2nd International Conference on Human-centered Artificial Intelligence},
+  year      = {2021},
+  volume    = {3026},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {18-26},
+  owner     = {Vincent},
+  timestamp = {2021.12.04},
+  url       = {http://ceur-ws.org/Vol-3026/paper2.pdf},
+}
+
 @InCollection{Leerssen2019,
   author    = {Leerssen, J.},
   title     = {National drama and national theatre},
@@ -24604,7 +24650,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{MacCarron2013,
   author    = {Mac Carron, P. and Kenna, R.},
-  title     = {Network analysis of the Íslendinga sögur - the Sagas of Icelanders},
+  title     = {Network analysis of the Íslendinga sögur - The Sagas of Icelanders},
   journal   = {European Physical Journal B},
   year      = {2013},
   volume    = {86},
@@ -28661,6 +28707,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@InCollection{Newman2008a,
+  author    = {Newman, M. E. J.},
+  title     = {Mathematics of networks},
+  booktitle = {The New Palgrave Encyclopedia of Economics},
+  publisher = {Palgrave Macmillan},
+  year      = {2008},
+  address   = {Basingstoke, UK},
+  edition   = {2nd},
+  doi       = {10.1057/9780230226203.1064},
+  owner     = {Vincent},
+  timestamp = {2010.10.05},
+}
+
 @Book{Newman2010,
   title     = {Networks: An Introduction},
   publisher = {Oxford University Press},
@@ -31491,6 +31550,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/A_Dictionary_of_Narratology.html?id=WvRNGan8YZcC&redir_esc=y},
 }
 
+@InProceedings{Progulova2010,
+  author    = {Progulova, T. and Gadjiev, B.},
+  title     = {Comparative analysis of collaboration networks},
+  booktitle = {Bayesian Inference and Maximum Entropy Methods in Science and Engineering},
+  year      = {2010},
+  volume    = {1305},
+  series    = {AIP Conference Proceedings},
+  pages     = {415-422},
+  doi       = {10.1063/1.3573646},
+  owner     = {Vincent},
+  timestamp = {2021.12.12},
+}
+
 @Book{Propp1984,
   title     = {Theory and History of Folklore},
   publisher = {Manchester University Press},
@@ -32159,6 +32231,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2684822.2685324},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@TechReport{RDevelopmentCoreTeam2009a,
+  author      = {{R Development Core Team}},
+  title       = {R: A Language and Environment for Statistical Computing},
+  institution = {R Foundation for Statistical Computing},
+  year        = {2009},
+  owner       = {Vincent},
+  timestamp   = {2010.06.03},
+  url         = {http://www.R-project.org},
 }
 
 @Article{Reagan2016,
@@ -35815,6 +35897,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.01},
   url       = {https://books.google.fr/books/about/The_Sagas_of_Icelanders.html?id=BNeGQgAACAAJ&redir_esc=y},
+}
+
+@InProceedings{Smirnov2019,
+  author    = {Smirnov, I. A. and Kuperin, Y. A. and Dmitrieva, L. A.},
+  title     = {Computer analysis of the novel by M. A. Bulgakov Master and Margarita},
+  booktitle = {6th SWS International Scientific Conference on Arts and Humanities},
+  year      = {2019},
+  pages     = {457-464},
+  doi       = {10.5593/SWS.ISCAH.2019.1/S27.058},
+  owner     = {Vincent},
+  timestamp = {2021.12.12},
 }
 
 @InProceedings{Smith2001,
@@ -43087,6 +43180,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2008.4587451},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{ZhitomirskyGeffet2018,
+  author    = {Zhitomirsky-Geffet, M. and Prebor, G.},
+  title     = {{SageBook}: Toward a cross-generational social network for the Jewish sages' prosopography},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2018},
+  volume    = {34},
+  number    = {3},
+  pages     = {676-695},
+  doi       = {10.1093/llc/fqy065},
+  owner     = {Vincent},
+  timestamp = {2021.12.12},
 }
 
 @Article{Zhou2003a,
